--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <nav>
         <a href="#" class="logo">CV</a>
         <a href="index.html"><i class="fas fa-home"></i><b>HOME</b></a>
-        <a href="about-me"><i class="fas fa-user"></i><b>ABOUT ME</b></a>
-        <a href="projects"><i class="fas fa-briefcase"></i><b>PROJECTS</b></a>
-        <a href="contact-me"><i class="far fa-envelope"></i><b>CONTACT</b></a>
+        <a href="#"><i class="fas fa-user"></i><b>ABOUT</b></a>
+        <a href=""><i class="fas fa-briefcase"></i><b>WORK</b></a>
+        <a href=""><i class="far fa-envelope"></i><b>CONTACT</b></a>
         <!-- coverpic -->
     </nav>
     <section>
@@ -38,7 +38,7 @@
                 <img src="images/snow 310-01EDIT.jpg" alt="">
             </div>
             <div class="profile-personal">
-                <p>Get To Know Me</p>
+                <p>GET TO KNOW ME</p>
                 <p>Front End Developer & Designer</p>
                 <p>Hi there! I'm chinduja, front end developer living in Gothenburg,Sweden. I have passion for design
                     and creating responsive websites. Front End Development is building out the visual components of a
@@ -51,25 +51,28 @@
     </section>
     <!-- project     -->
     <section class="projects">
-        <h3>My Projects</h3>
+        <h3>WORK</h3>
         <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser.I value simple content
             structure, clean design patterns, and thoughtful interactions.I enjoy designing web, Apps, Logos, Mobile. I
-            use design tools like Sigma, Sketch,Pen & Paper.</p>
+            use design tools like Figma, Sketch,Pen & Paper.My websites are fully responsive with custom designed layout.</p>
         <div class="projects-offered">
             <div class="project-1">
                 <div>
+                    <h4>USER FRIENDLY DESIGN</h4>
                     <img src="images/project4.png" alt="">
-                    <p>I like to create websites with modern and clean outlook. My designs are user friendly with easy
+                    <p>I like to create websites with modern and clean outlook. My designs are user friendly with easy navigation and
                         experience to access the website.</p>
                 </div>
             </div>
             <div class="project-2">
+                <h4>RESPONSIVE WEB DESIGN</h4>
                 <img src="images/project2.png" alt="">
                 <p>I enjoy creating responsive websites which is compatible to desktop screen , mobile screen and other
                     screens in different orientation.</p>
 
             </div>
             <div class="project-3">
+                <h4>DESIGN SKILLS</h4>
                 <img src="images/project3.png" alt="">
                 <p>I use various design tools like Adobe xd to create thoughful, interactive and simple websites
                     according to the needs of the clients. </p>
@@ -80,7 +83,7 @@
     <!-- footer -->
     <footer class="contact-me">
         <h1>CONTACT ME</h1>
-        <p>Iam interested in freelance oppurtunities. However, if you have any other request, don't hesitate to contact
+        <p>I'am interested in freelance oppurtunities. However, if you have any other request, don't hesitate to contact
             me using below form either.</p>
         <form action="https://formspree.io/f/xeqpdpgq" method="POST">
             <div>
