--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
     <nav>
-        <a href="#" class="logo">CV</a>
+        <a href="index.html" class="logo">CV</a>
         <a href="index.html"><i class="fas fa-home"></i><b>HOME</b></a>
-        <a href="#"><i class="fas fa-user"></i><b>ABOUT</b></a>
-        <a href=""><i class="fas fa-briefcase"></i><b>WORK</b></a>
-        <a href=""><i class="far fa-envelope"></i><b>CONTACT</b></a>
+        <a href="#about"><i class="fas fa-user"></i><b>ABOUT</b></a>
+        <a href="#work"><i class="fas fa-briefcase"></i><b>WORK</b></a>
+        <a href="#contact"><i class="far fa-envelope"></i><b>CONTACT</b></a>
         <!-- coverpic -->
     </nav>
     <section>
@@ -37,7 +37,7 @@
             <div class="profile-image">
                 <img src="images/snow 310-01EDIT.jpg" alt="">
             </div>
-            <div class="profile-personal">
+            <div class="profile-personal" id="about">
                 <p>GET TO KNOW ME</p>
                 <p>Front End Developer & Designer</p>
                 <p>Hi there! I'm chinduja, front end developer living in Gothenburg,Sweden. I have passion for design
@@ -52,10 +52,10 @@
     <!-- project     -->
     <section class="projects">
         <h3>WORK</h3>
-        <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser.I value simple content
-            structure, clean design patterns, and thoughtful interactions.I enjoy designing web, Apps, Logos, Mobile. I
-            use design tools like Figma, Sketch,Pen & Paper.My websites are fully responsive with custom designed layout.</p>
-        <div class="projects-offered">
+        <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I value simple content
+            structure, clean design patterns, and thoughtful interactions. I enjoy designing web, Apps, Logos, Mobile. I
+            use design tools like Figma, Sketch,Pen & Paper. My websites are fully responsive with custom designed layout.</p>
+        <div class="projects-offered" id="work">
             <div class="project-1">
                 <div>
                     <h4>USER FRIENDLY DESIGN</h4>
@@ -85,10 +85,11 @@
         <h1>CONTACT ME</h1>
         <p>I'am interested in freelance oppurtunities. However, if you have any other request, don't hesitate to contact
             me using below form either.</p>
-        <form action="https://formspree.io/f/xeqpdpgq" method="POST">
+        <form action="https://formspree.io/f/xeqpdpgq" method="POST" id="contact">
             <div>
+                
                 <input type="text" name="name" id="name" placeholder="Enter Your Name">
-
+               
                 <input type="email" name="email" id="email" placeholder="Enter Email id">
             </div>
             <div>
@@ -99,16 +100,16 @@
         </form>
         <!-- socialmedia -->
         <div class="social-icons">
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/chinduja-net" target="blank"><i class="fab fa-github"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.instagram.com/" target="blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/feed/" target="blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <div class="social">
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/chinduja-net" target="blank"><i class="fab fa-github"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.instagram.com/" target="blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/feed/" target="blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
     </footer>
 </body>
